Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22353

Qt Creator erroneously claims no valid kits are installed, until you type in filter field.

XMLWordPrintable

    • macOS
    • 0ddd473cc026c2e4d33ac1a65ee8ffdeb9ac85af

      Every so often, I'll open a project and Qt Creator will claim that it hasn't been configured yet. It will also claim that there are no valid kits installed (despite "Manage Kits" showing plenty). Often this will magically resolve itself if I open the project again later, but this time it wouldn't.

      It turns out that this is a UI defect. If you type a character in the Filter field on the "Configure Project" page, your kits will magically appear. After that, the kits will remain displayed even if you clear the filter field. Screen shot attached.

      To reproduce the bug, you may be able to deselect all kits for a project, then close and re-open it. Or perhaps delete the .user file. I'm not sure why the project got into this state to begin with, although I suspect it's because we don't commit the .user files to our SCM system.

        For Gerrit Dashboard: QTCREATORBUG-22353
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            ghs Gavin Stokes
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes