Target setup page: Handle slow kit manager

It has been observed by users (though not reproduced here) that the
target setup page would apparently appear before the kit manager was
finished setting up the initial kits, leading to an empty kit list on
the target setup page even after the kits were finally loaded.
We now take this possibility into account.

Fixes: QTCREATORBUG-22353
Change-Id: I83cdc3da45785c3badfac484a54f34859191cc37
Reviewed-by: hjk <hjk@qt.io>